2008-03-05  Wade Berrier  <wberrier@novell.com>

	* scripts/Makefile.am: fix typo so that 'scripts_defaults' scripts get
	installed.
	Fix sed command so that 'scripts_defaults' scripts work. 
	Add some files to the cleanup list.

2008-03-02  Miguel de Icaza  <miguel@novell.com>

	* configure.in: No need to detect mcs1, as we are going to keep
	mcs as the 1.0 compiler and gmcs as the 2.0 compiler.  Since
	making mcs a 2.0 compiler caused too many problems.

2008-02-29  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Detect if there is an mcs1 command installed as
	the external c# compiler, and if this is the compiler, pick this
	to bootstrap. 

	You need to re-autogen.sh after the first installation of mono
	with the new scripts.

2008-02-28  Miguel de Icaza  <miguel@novell.com>

	* scripts/Makefile.am: Implement new defaults for the Mono 2.0
	release, 2.0 profile executables are now the defaults (al, ilasm,
	mkbundle, mono-api-info, monop, resgen, wsdl and mcs).

	Old commands running under the 1.0 profile are still available
	by having the number 1 appended to their command name (al1,
	ilasm1, mcs1, mkbundle1, mono-api-info1, monop1, resgen1, wsdl1). 

2008-02-05  Zoltan Varga  <vargaz@gmail.com>

	* runtime/Makefile.am: Update after the changes to mcs/Makefile.

2008-02-03  Zoltan Varga  <vargaz@gmail.com>

	* runtime/Makefile.am (clean-local): Use mono --wapi=semdel instead of the
	nonexistent semdel utility.

	* runtime/semdel-wrapper.in: Delete.

2008-01-28  Wade Berrier  <wberrier@novell.com>

	* configure.in: version bump -> 1.9

2008-01-26  Zoltan Varga  <vargaz@gmail.com>

	* docs/mini-porting.txt: Add some info about the order the JIT regression
	tests should be run.

2008-01-26  Daniel Nauck  <dna@mono-project.de>

	* scripts/mono-service.in: fix compability with the dash shell,
	it doesn't like the use of >& without a file descriptor

2008-01-09  Zoltan Varga  <vargaz@freemail.hu>
